--- a/default.html
+++ b/default.html
@@ -48,7 +48,7 @@
             <li><a href="index.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">英文版本</a></li>
             <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
             <hr>
-            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727 is a global certification program that advocates for social responsibility in tutoring. As of October 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 15 certifications.</p>
+            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727 is a global certification program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certifications.</p>
         </ul>
     </div>
     <!-- /Side Menu -->
@@ -82,7 +82,7 @@
             <div class="col-md-12 text-center">
                 <h2 style="text-align: left"><b>简介</b></h2>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;KB727 是倡导私教课程社会责任的全球认证计划。截至 2024 年 10 月，我们已在上海、西雅图和布法罗进行了 200 多次访谈，颁发了 15 项认证。
+                &emsp;&emsp;KB727 是倡导私教课程社会责任的全球认证计划。截至 2024 年 12 月，我们已在上海、西雅图和布法罗进行了 200 多次访谈，颁发了 17 项认证。
                 </br></br>
                 &emsp;&emsp;通过预约访谈、深入交流，我们接触到很多高品质的私教课程、一对一的资深导师，从 K-12 阅读理解、基础数学、微积分、化学到 TOEFL-IBT 考试再到游泳、健身，私教课程已经超出了学生学业学科的范围：您还可以在专业考试和论文、写简历或求职面试等多方面获得资深导师的帮助。许多导师在其擅长的学科领域拥有高级学位和专业经验，拥有如此多的脑力，谁会不愿意让私教课程为自己的发展和前途接力呢？
                 </br></br>
@@ -105,12 +105,37 @@
                 <hr>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;资深导师自身具有专业水平和业务经验，能够帮助学员量身打造私教课程，重视实践指导，对学员负责，通常收费不菲。我们倡导商业化私教课程的社会责任，尽自己的能力为低收入家庭和经济困难者提供帮助。</br>
-                &emsp;&emsp;以下 15 门私教课程已通过我们的认证并获得奖励：</p>
+                &emsp;&emsp;以下 17 门私教课程已通过我们的认证并获得奖励：</p>
             </div>
         </div>
 
     <div id="services" class="services">
         <div class="container">
+
+                <h3 style="text-align: left"><b>海归小姐姐教你挑战托福100+，899💰就够了！</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;👩🏻‍🎓纽约州立大学布法罗分校英语硕士毕业，托福110+，有5年的托福教学经验，擅长口语/写作/阅读/听力等~打算带30个真心想学托福的同学，手把手教学（仅899💰）</br>
+                &emsp;&emsp;因为在做自己的口碑，所以💰很亲民噢，希望在托福方面帮助到需要的饱子，顺利出分啦~</br>
+                &emsp;&emsp;具体服务有：</br>
+                &emsp;&emsp;🌸制定专属备考方案、每天监督学习，每周根据完成情况（进行动态调整）</br>
+                &emsp;&emsp;🌸口语、写作内容老师精细化批改</br>
+                &emsp;&emsp;🌸提供在线模考系统（提前适应考试场景）</br>
+                &emsp;&emsp;🌸错题收纳和专业答疑，随时复习不再错</br>
+                &emsp;&emsp;🌸四科词汇分类整理，减少无效学习</br>
+                &emsp;&emsp;🌸提供学情分析，对自己的学习知根知底</br>
+                &emsp;&emsp;🌸提供全科托福备考资料</br>
+                &emsp;&emsp;学员要求：</br>
+                &emsp;&emsp;1、真心想学托福</br>
+                &emsp;&emsp;2、每天有1-2小时学习时间</br>
+                &emsp;&emsp;3、能按时完成作业</br>
+                &emsp;&emsp;4、拒绝三天打鱼两天晒网</br>
+                &emsp;&emsp;5、可以基础差，但要认真学哦</br>
+                &emsp;&emsp;诚心带，诚心要学、想学的来❤️~</br>
+                &emsp;&emsp;全科一对一辅导，我认真负责，希望可以帮到你~</br>
+                &emsp;&emsp;欢迎感兴趣的同学联系 min@kb727.com 咨询规划！！！</br>
+                &emsp;&emsp;#托福 #托福写作 #托福口语 #托福阅读 #托福听力 #托福考试 #托福备考 #备考托福 #出分吧托福
+                </p>
+
                 <h3 style="text-align: left"><b>美国高中、本科、硕士、博士及美国签证、驾驶执照、银行账户申请辅导</b></h3>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;请联系 min@kb727.com 预约美国留学中介。</br>
@@ -214,10 +239,10 @@
 
                 <h3 style="text-align: left"><b>银行网点新业态提升与基建工程管理岗位求职面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;<b>课程背景：</b>银行网点布局与重要基础设施建设正面临全面变革的新形势，各行应高度重视项目经理和从事项目控制、设计管理、采购管理、施工管理、合同管理、质量安全管理以及风险管理等方面的人才培养，提高自身项目管理团队的能力，提升工程全过程的把握与控制水平。本课程结合银行实际工作，站在业主方的立场，系统化地培训银行网点新业态提升与基础设施建设工程项目的管理制度、项目范围、采购与投标管理、合同管理、设计与技术管理、进度管理、质量管理、成本管理、安全生产管理、绿色建造与环境管理、资源管理、信息管理、沟通管理与协调、风险管理、收尾管理和管理绩效评价。</br>
-                &emsp;&emsp;<b>课程获益：</b>对标先进同业和业内标杆，学习工程与造价、招投标采购、合同等各阶段工作的深度融合和系统集成过程，提升银行网点新业态、基础设施建设工程的技术、管理能力，尤其是设计、施工一体化及资源整合的能力。</br>
-                &emsp;&emsp;<b>辅导对象：</b>银行从事基建、合同管理、工程项目建设、采购、审计、监察等相关部门人员；各施工、监理、项目管理、工程造价、招标代理等。</br>
-                &emsp;&emsp;<b>课程大纲：</b></br>
+                &emsp;&emsp;课程背景：银行网点布局与重要基础设施建设正面临全面变革的新形势，各行应高度重视项目经理和从事项目控制、设计管理、采购管理、施工管理、合同管理、质量安全管理以及风险管理等方面的人才培养，提高自身项目管理团队的能力，提升工程全过程的把握与控制水平。本课程结合银行实际工作，站在业主方的立场，系统化地培训银行网点新业态提升与基础设施建设工程项目的管理制度、项目范围、采购与投标管理、合同管理、设计与技术管理、进度管理、质量管理、成本管理、安全生产管理、绿色建造与环境管理、资源管理、信息管理、沟通管理与协调、风险管理、收尾管理和管理绩效评价。</br>
+                &emsp;&emsp;课程获益：对标先进同业和业内标杆，学习工程与造价、招投标采购、合同等各阶段工作的深度融合和系统集成过程，提升银行网点新业态、基础设施建设工程的技术、管理能力，尤其是设计、施工一体化及资源整合的能力。</br>
+                &emsp;&emsp;辅导对象：银行从事基建、合同管理、工程项目建设、采购、审计、监察等相关部门人员；各施工、监理、项目管理、工程造价、招标代理等。</br>
+                &emsp;&emsp;课程大纲：</br>
                 &emsp;&emsp;1.网点新业态提升的意义；</br>
                 &emsp;&emsp;2.网点空间与视觉形象打造；</br>
                 &emsp;&emsp;3.银行基建部门的职责、定位与转型；</br>
@@ -275,8 +300,20 @@
                 &emsp;&emsp;55.银行基建工程项目标准化管理、信息管理与综合管理的集成；</br>
                 &emsp;&emsp;56.施工现场管理与项目知识管理提升；</br>
                 &emsp;&emsp;57.银行基建工程项目审计的方法应用。</br>
-                &emsp;&emsp;<b>课程讲师：</b>授课老师曾担任银行基建部门负责人，具有丰富的银行营业网点与重要基础设施建设项目全过程管理经验，其授课善于理清实务中重点、难点、疑点、焦点等专业共性问题的机理和深层原因，帮助学员拓展解决问题的视野和思路，实质性地提高专业素养和能力。</br>
-                &emsp;&emsp;<b>课程预约：</b>请联系 banking@kb727.com 预约资深专家，全部讲解需 120 分钟，回答和交流全部问题。
+                &emsp;&emsp;课程讲师：授课老师曾担任银行基建部门负责人，具有丰富的银行营业网点与重要基础设施建设项目全过程管理经验，其授课善于理清实务中重点、难点、疑点、焦点等专业共性问题的机理和深层原因，帮助学员拓展解决问题的视野和思路，实质性地提高专业素养和能力。</br>
+                &emsp;&emsp;课程预约：请联系 banking@kb727.com 预约资深专家，全部讲解需 120 分钟，回答和交流全部问题。
+                </p>
+
+                <h3 style="text-align: left"><b>代写回忆录、传记</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;人生需要记录才完美！无论是企业，还是家族，都有文化上的根。</br>
+                &emsp;&emsp;在访谈、挖掘材料的时候，也是在梳理他们一直向上发展、未被具象化命名的独有的文化。要去溯源，去贯穿，去呈现，能从普通人的底色中透出华彩。这需要写作者有足够的文化底蕴和与沟通共情能力。</br>
+                &emsp;&emsp;我们代写回忆录、传记，这是一项庄重而富有意义的工作，我们不接急单，因为每一份回忆录、传记都承载着一个人独一无二的人生故事，需要时间去细细品味、去深刻挖掘。我们的目标不仅仅是文字的堆砌，更是为了还原人生的真实面貌，记录那些或平凡或非凡的经历，让每一个瞬间都焕发出它应有的光彩。</br>
+                &emsp;&emsp;在撰写回忆录的过程中，我们会与委托人深入交流，倾听他们的心声，了解他们的喜怒哀乐、成长历程和人生感悟。我们会用心去感受他们的情感，用文字去描绘那些或温馨或感人的场景，让读者在阅读的过程中仿佛置身于其中，与委托人一同经历那些难忘的时刻。</br>
+                &emsp;&emsp;我们深知，每个人的生命都是独一无二的，他们的经历、情感和思想都值得被尊重和记录。因此，在代写回忆录、传记时，我们会秉持着真实、客观、细致的原则，力求还原每一个细节，让这份回忆录、传记成为委托人人生道路上的一份珍贵记忆。</br>
+                &emsp;&emsp;通过我们的笔触，希望能够留下委托人生命的足迹，让后人能够从中汲取力量、获得启示。这份回忆录、传记不仅是对委托人过去生活的回顾和总结，更是对他们未来人生的期许和祝福。我们相信，每一份回忆录都将是一份永恒的财富，激励着人们不断前行、追求更加美好的未来。</br>
+                &emsp;&emsp;请联系 historical@kb727.com 与我们预约委托事项。
+                &emsp;&emsp;#一切美好值得纪念 #回忆录 #传记 #生活有所期待才能有所热爱 #总有一种美好值得期待 #用心记录生活 #浪漫的生活记录着 #周而复始的日子里寻找快乐
                 </p>
 
                 <h3 style="text-align: left"><b>人物传记与回忆录撰写指导</b></h3>
