--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
     <div id="top" class="header">
         <div class="vert-text">
             <div class="expandUp">
-            <h1><span class="long-word"><b>KB727</b></span></h1>
+            <h1><span class="long-word"><b>KB727.COM</b></span></h1>
             </div></br></br></br></br>
         </div>
     </div>
