--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="KB727 is a global certification program that advocates for social responsibility in tutoring.">
-    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certification,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,teas tutoring classes near me,free online tutoring classes math,asvab tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K–12,Expert Tutors,Subjects">
+    <meta name="description" content="KB727 is a global certificate program that advocates for social responsibility in tutoring.">
+    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certificate,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,teas tutoring classes near me,free online tutoring classes math,asvab tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K–12,Expert Tutors,Subjects">
     <meta name="author" content="KB727">
     <meta name="apple-mobile-web-app-title" content="KB727">
     <meta name="application-name" content="KB727">
@@ -48,7 +48,7 @@
             <li><a href="default.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">Chinese Website</a></li>
             <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">Send E-mail</a></li>
             <hr>
-            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727 is a global certification program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certifications.</p>
+            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
         </ul>
     </div>
     <!-- /Side Menu -->
@@ -57,8 +57,8 @@
     <div id="top" class="header">
         <div class="vert-text">
             <div class="expandUp">
-            <h2><b>KB727 Certification</b></h2>
-            <h4>advocates for social responsibility in tutoring</h4>
+            <h2><b>KB727 CERTIFICATE</b></h2>
+            <h3>for social responsibility in tutoring</h3>
             </div></br></br></br></br>
             <ul class="list-inline spaced">
                 <li><a href="#what" title="WHAT'S KB727" alt="WHAT'S KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
@@ -79,7 +79,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>WHAT'S KB727</b></h3>
                 <p class="lead" style="text-align: left">
-                KB727 is a global certification program that advocates for social responsibility in tutoring.
+                KB727 is a global certificate program that advocates for social responsibility in tutoring.
                 </p>
         </div>
     </div>
@@ -88,7 +88,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>WHY KB727</b></h3>
                 <p class="lead" style="text-align: left">
-                Money shouldn't dictate access to education. We want to live in a world where everyone have access to a great education — not just those whose families can afford one. We encourage and support more low-income families and those with financial difficulties to access free tutorials. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certifications.
+                Money shouldn't dictate access to education. We want to live in a world where everyone have access to a great education — not just those whose families can afford one. We encourage and support more low-income families and those with financial difficulties to access free tutorials. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.
                 </p>
         </div>
     </div>
@@ -97,7 +97,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>HOW WE WORK</b></h3>
                 <p class="lead" style="text-align: left">
-                The same tutor who provides free tutoring for low-income families and the financially disadvantaged for more than 6 months will pass KB727 certification and receive rewards, as well as commercial promotion support. Authentication documents and delivery of reward items will be confirmed by the official email. We're the oldest organization doing this work. We've been doing this for a long time and we've learned a lot along the way.
+                The same tutor who provides free tutoring for low-income families and the financially disadvantaged for more than 6 months will get KB727 certificate and receive rewards, as well as commercial promotion support. Authentication documents and delivery of reward items will be confirmed by the official email. We're the oldest organization doing this work. We've been doing this for a long time and we've learned a lot along the way.
                 </p>
          </div>
      </div>
