--- a/default.html
+++ b/default.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="为彰显社会责任的私教课程提供奖励和支持。">
-    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certification,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,teas tutoring classes near me,free online tutoring classes math,asvab tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K–12,Expert Tutors,Subjects">
+    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certificate,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,teas tutoring classes near me,free online tutoring classes math,asvab tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K–12,Expert Tutors,Subjects">
     <meta name="author" content="KB727">
     <meta name="apple-mobile-web-app-title" content="KB727">
     <meta name="application-name" content="KB727">
@@ -48,7 +48,7 @@
             <li><a href="index.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">英文版本</a></li>
             <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
             <hr>
-            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727 is a global certification program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certifications.</p>
+            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
         </ul>
     </div>
     <!-- /Side Menu -->
