--- a/404.html
+++ b/404.html
@@ -39,8 +39,10 @@
     <div id="top" class="header">
         <div class="vert-text">
             <div class="expandUp">
-            <h1><span class="long-word"><b>KB727.COM</b></span></h1>
+            <h2><b>KB727 CERTIFICATE</b></h2>
+            <h3>for social responsibility in tutoring</h3>
             </div></br></br></br></br>
+
         </div>
     </div>
     <!-- /Full Page Image Header Area -->
