--- a/default.html
+++ b/default.html
@@ -432,11 +432,8 @@
                 <div class="col-md-6 col-md-offset-3 text-center">
                 <h2><b>部分合作机构的业务链接</b></h2>
                 <ul class="list-inline spaced">
-                   <li><a href="attachments/kuajing.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">跨境合作</a></li>
-                   <li><a href="attachments/maidi.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">求购二手地</a></li>
-                   <li><a href="attachments/qingpu.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">上海青浦产业园出售</a></li>
-                   <li><a href="attachments/qiaodaohu.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">浙江千岛湖民居长租</a></li>
-                   <li><a href="attachments/chongming.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">上海崇明森林度假村转让</a></li>
+                   <li><a href="attachments/Overseas-Projects.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">跨境合作</a></li>
+                   <li><a href="attachments/Buying-and-selling-Assets.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">资产交易</a></li>
                 </ul>
                 <hr>
             <ul class="list-inline spaced">
