--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
         <div class="container">
                 <h3 style="text-align: left"><b>WHAT'S KB727</b></h3>
                 <p class="lead" style="text-align: left">
-                KB727 is a global certificate program that advocates for social responsibility in tutoring.
+                KB727 is a global certificate program that advocates for social responsibility in tutoring.</br></br>
+
+                Our non-profit is dedicated to empowering students by providing them with opportunities to transform their futures. Many of these students can't afford the essential fees for tutoring that could unlock life-changing doors. That's why we're working to helping them take the crucial next step toward success.
                 </p>
         </div>
     </div>
@@ -106,7 +108,11 @@
         <div class="container">
                 <h3 style="text-align: left"><b>WANT  TO GET INVOLVED?</b></h3>
                 <p class="lead" style="text-align: left">
-                We are willing to cooperate with more tutors, media, institutions, and donors to jointly provide support for socially responsible tutorials, please contact us through the official email.
+                We need your help to share KB727 with your network and create a lasting impact. Education has the power to transform lives, uplift communities, and break the cycle of poverty. With your support, we can give these students the chance they deserve.</br></br>
+
+                It will only take a few minutes to copy the message we provide and share it with your network. </br></br>
+
+                We are willing to cooperate with more tutors, media, institutions, and donors to jointly provide support for socially responsible tutorials. If you're ready to help, please reach out. Together, we can make a world of difference. Thank you.
                 </p>
          </div>
      </div>
