--- a/default.html
+++ b/default.html
@@ -176,7 +176,7 @@
                 <h2><b>部分合作机构的业务链接</b></h2>
                 <ul class="list-inline spaced">
                    <li><a href="attachments/Overseas-Projects.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">跨境合作</a></li>
-                   <li><a href="attachments/Buying-and-Selling-Assets.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">资产交易</a></li>
+                   <li><a href="attachments/Assets.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">资产交易</a></li>
                 </ul>
                 <hr>
             <ul class="list-inline spaced">
