--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
     <link href="css/animations.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a74ffbaf46.js" crossorigin="anonymous"></script>
 
@@ -41,15 +41,17 @@
             <div class="expandUp">
             <h2><b>KB727 CERTIFICATE</b></h2>
             <h3>for social responsibility in tutoring</h3>
-            </div></br></br></br></br>
+            </div><br><br><br><br>
 
         </div>
     </div>
     <!-- /Full Page Image Header Area -->
 
 <p align="center">
-        <script language="javascript" type="text/javascript">
-            setTimeout(function () { this.location.href = "index.html" }, 9000);
+        <script>
+            setTimeout(function() {
+                window.location.href = "index.html";
+            }, 9000);
         </script>
 </p>
 
