--- a/default.html
+++ b/default.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="为彰显社会责任的私教课程提供奖励和支持。">
-    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certificate,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,teas tutoring classes near me,free online tutoring classes math,asvab tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K–12,Expert Tutors,Subjects">
+    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certificate,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,teas tutoring classes near me,free online tutoring classes math,asvab tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K-12,Expert Tutors,Subjects">
     <meta name="author" content="KB727">
     <meta name="apple-mobile-web-app-title" content="KB727">
     <meta name="application-name" content="KB727">
@@ -19,7 +19,7 @@
     <link href="css/animations.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a74ffbaf46.js" crossorigin="anonymous"></script>
 
@@ -48,7 +48,7 @@
             <li><a href="index.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">英文版本</a></li>
             <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
             <hr>
-            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
+            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE">KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
         </ul>
     </div>
     <!-- /Side Menu -->
@@ -59,7 +59,7 @@
             <div class="expandUp">
             <h2><b>为彰显社会责任的私教课程</b></h2>
             <h2><b>提供奖励和支持</b></h2>
-            </div></br></br></br></br>
+            </div><br><br><br><br>
             <ul class="list-inline spaced">
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="attachments/Training-Consulting.txt" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
@@ -83,19 +83,19 @@
                 <h2 style="text-align: left"><b>简介</b></h2>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;KB727 是倡导私教课程社会责任的全球认证计划。截至 2024 年 12 月，我们已在上海、西雅图和布法罗进行了 200 多次访谈，颁发了 17 项认证。
-                </br></br>
+                <br><br>
                 &emsp;&emsp;通过预约访谈、深入交流，我们接触到很多高品质的私教课程、一对一的资深导师，从 K-12 阅读理解、基础数学、微积分、化学到 TOEFL-IBT 考试再到游泳、健身，私教课程已经超出了学生学业学科的范围：您还可以在专业考试和论文、写简历或求职面试等多方面获得资深导师的帮助。许多导师在其擅长的学科领域拥有高级学位和专业经验，拥有如此多的脑力，谁会不愿意让私教课程为自己的发展和前途接力呢？
-                </br></br>
+                <br><br>
                 &emsp;&emsp;然而在现实情况下，低收入家庭和经济困难者可能就没有机会。金钱不应该决定接受教育的机会。我们希望生活在一个每个人都能获得良好教育的世界——而不仅仅是那些家庭负担得起的人。
-                </br></br>
+                <br><br>
                 &emsp;&emsp;我们的非营利组织致力于通过为学生提供改变未来的机会来赋予他们权力。这些学生中的许多人负担不起可能打开改变生活之门的辅导基本费用。这就是为什么我们正在努力帮助他们迈出迈向成功的关键一步。
-                </br></br>
+                <br><br>
                 &emsp;&emsp;资深导师自身具有专业水平和业务经验，能够帮助学员量身打造私教课程，重视实践指导，对学员负责，通常收费不菲。我们倡导商业化私教课程的社会责任，尽自己的能力为低收入家庭和经济困难者提供帮助。为低收入家庭和经济困难者提供免费辅导超过 6 个月的同一位导师将通过 KB727 认证，获得奖励以及商业推广支持。认证文件和奖品交付将通过官网邮件确认。       
-                </br></br>
+                <br><br>
                 &emsp;&emsp;我们需要您的帮助，以便与您的网络共享 KB727 并产生持久的影响。教育有能力改变生活、提升社区和打破贫困循环。在您的支持下，我们可以为这些学生提供他们应得的机会。只需几分钟即可复制我们提供的消息并将其与您的网络共享。
-                </br></br>
+                <br><br>
                 &emsp;&emsp;我们愿意与更多的导师、媒体、机构和捐赠者合作，共同为有社会责任感的教程提供支持。如果您已准备好提供帮助，请联系我们。我们可以一起创造一个不同的世界。感谢导师、媒体、机构、捐赠者对我们这项工作的关心和支持。
-                </br>
+                <br>
                 </p>
             </div>
         </div>
@@ -166,7 +166,7 @@
     </div>
     <!-- /Findoutmore -->
 
-    </br></br>
+    <br><br>
 
     <!-- Footer -->
     <footer>
