--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="KB727 is a global certificate program that advocates for social responsibility in tutoring.">
-    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certificate,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,teas tutoring classes near me,free online tutoring classes math,asvab tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K–12,Expert Tutors,Subjects">
+    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certificate,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,teas tutoring classes near me,free online tutoring classes math,asvab tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K-12,Expert Tutors,Subjects">
     <meta name="author" content="KB727">
     <meta name="apple-mobile-web-app-title" content="KB727">
     <meta name="application-name" content="KB727">
@@ -19,7 +19,7 @@
     <link href="css/animations.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a74ffbaf46.js" crossorigin="anonymous"></script>
 
@@ -44,11 +44,11 @@
             <li><a href="#what" onClick="ga('send', '_trackEvent', 'Navbar', 'About');">WHAT'S KB727</a></li>
             <li><a href="#why" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">WHY KB727</a></li>
             <li><a href="#how" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">HOW WE WORK</a></li>
-            <li><a href="#want" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">WANT  TO GET INVOLVED?</a></li>
+            <li><a href="#want" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">WANT TO GET INVOLVED?</a></li>
             <li><a href="default.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">Chinese Website</a></li>
             <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">Send E-mail</a></li>
             <hr>
-            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
+            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE">KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
         </ul>
     </div>
     <!-- /Side Menu -->
@@ -59,12 +59,12 @@
             <div class="expandUp">
             <h2><b>KB727 CERTIFICATE</b></h2>
             <h3>for social responsibility in tutoring</h3>
-            </div></br></br></br></br>
+            </div><br><br><br><br>
             <ul class="list-inline spaced">
                 <li><a href="#what" title="WHAT'S KB727" alt="WHAT'S KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="#why" title="WHY KB727" alt="WHY KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-expand fa-3x"></i></a></li>
                 <li><a href="#how" title="HOW WE WORK" alt="HOW WE WORK" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-pen-to-square fa-3x"></i></a></li>
-                <li><a href="#want" title="WANT  TO GET INVOLVED?" alt="WANT  TO GET INVOLVED?" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
+                <li><a href="#want" title="WANT TO GET INVOLVED?" alt="WANT TO GET INVOLVED?" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
                 <li><a href="default.html" target="_blank"  title="Chinese Website" alt="Chinese Website" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
                 <li><a href="mailto:webmaster@kb727.com" title="Send E-mail" alt="Send E-mail" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
@@ -72,14 +72,14 @@
     </div>
     <!-- /Full Page Image Header Area -->
 
-    </br>
+    <br>
 
     <!-- services -->
     <div id="what" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>WHAT'S KB727</b></h3>
                 <p class="lead" style="text-align: left">
-                KB727 is a global certificate program that advocates for social responsibility in tutoring.</br></br>
+                KB727 is a global certificate program that advocates for social responsibility in tutoring.<br><br>
 
                 Our non-profit is dedicated to empowering students by providing them with opportunities to transform their futures. Many of these students can't afford the essential fees for tutoring that could unlock life-changing doors. That's why we're working to helping them take the crucial next step toward success.
                 </p>
@@ -90,7 +90,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>WHY KB727</b></h3>
                 <p class="lead" style="text-align: left">
-                Money shouldn't dictate access to education. We want to live in a world where everyone have access to a great education — not just those whose families can afford one. We encourage and support more low-income families and those with financial difficulties to access free tutorials. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.
+                Money shouldn't dictate access to education. We want to live in a world where everyone has access to a great education — not just those whose families can afford one. We encourage and support more low-income families and those with financial difficulties to access free tutorials. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.
                 </p>
         </div>
     </div>
@@ -106,11 +106,11 @@
 
     <div id="want" class="services">
         <div class="container">
-                <h3 style="text-align: left"><b>WANT  TO GET INVOLVED?</b></h3>
+                <h3 style="text-align: left"><b>WANT TO GET INVOLVED?</b></h3>
                 <p class="lead" style="text-align: left">
-                We need your help to share KB727 with your network and create a lasting impact. Education has the power to transform lives, uplift communities, and break the cycle of poverty. With your support, we can give these students the chance they deserve.</br></br>
+                We need your help to share KB727 with your network and create a lasting impact. Education has the power to transform lives, uplift communities, and break the cycle of poverty. With your support, we can give these students the chance they deserve.<br><br>
 
-                It will only take a few minutes to copy the message we provide and share it with your network. </br></br>
+                It will only take a few minutes to copy the message we provide and share it with your network. <br><br>
 
                 We are willing to cooperate with more tutors, media, institutions, and donors to jointly provide support for socially responsible tutorials. If you're ready to help, please reach out. Together, we can make a world of difference. Thank you.
                 </p>
@@ -134,7 +134,7 @@
                 <li><a href="#what" title="WHAT'S KB727" alt="WHAT'S KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="#why" title="WHY KB727" alt="WHY KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-expand fa-3x"></i></a></li>
                 <li><a href="#how" title="HOW WE WORK" alt="HOW WE WORK" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-pen-to-square fa-3x"></i></a></li>
-                <li><a href="#want" title="WANT  TO GET INVOLVED?" alt="WANT  TO GET INVOLVED?" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
+                <li><a href="#want" title="WANT TO GET INVOLVED?" alt="WANT TO GET INVOLVED?" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
                 <li><a href="default.html" target="_blank"  title="Chinese Website" alt="Chinese Website" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
             </ul>
                     <ul class="list-unstyled size-m spaced">
