--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="KB727 is a global certificate program that advocates for social responsibility in tutoring.">
-    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certificate,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,teas tutoring classes near me,free online tutoring classes math,asvab tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K-12,Expert Tutors,Subjects">
+    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certificate,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,TEAS tutoring classes near me,free online tutoring classes math,ASVAB tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K-12,Expert Tutors,Subjects">
     <meta name="author" content="KB727">
     <meta name="apple-mobile-web-app-title" content="KB727">
     <meta name="application-name" content="KB727">
@@ -81,7 +81,7 @@
                 <p class="lead" style="text-align: left">
                 KB727 is a global certificate program that advocates for social responsibility in tutoring.<br><br>
 
-                Our non-profit is dedicated to empowering students by providing them with opportunities to transform their futures. Many of these students can't afford the essential fees for tutoring that could unlock life-changing doors. That's why we're working to helping them take the crucial next step toward success.
+                Our non-profit is dedicated to empowering students by providing them with opportunities to transform their futures. Many of these students can't afford the essential fees for tutoring that could unlock life-changing doors. That's why we're working to help them take the crucial next step toward success.
                 </p>
         </div>
     </div>
@@ -90,7 +90,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>WHY KB727</b></h3>
                 <p class="lead" style="text-align: left">
-                Money shouldn't dictate access to education. We want to live in a world where everyone has access to a great education — not just those whose families can afford one. We encourage and support more low-income families and those with financial difficulties to access free tutorials. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.
+                Money shouldn't dictate access to education. We want to live in a world where everyone has access to a great education — not just those whose families can afford one. We encourage and support more low-income families and those with financial difficulties to access free tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.
                 </p>
         </div>
     </div>
@@ -99,7 +99,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>HOW WE WORK</b></h3>
                 <p class="lead" style="text-align: left">
-                The same tutor who provides free tutoring for low-income families and the financially disadvantaged for more than 6 months will get KB727 certificate and receive rewards, as well as commercial promotion support. Authentication documents and delivery of reward items will be confirmed by the official email. We're the oldest organization doing this work. We've been doing this for a long time and we've learned a lot along the way.
+                The same tutor who provides free tutoring for low-income families and the financially disadvantaged for more than 6 months will receive the KB727 certificate and rewards, as well as commercial promotion support. Authentication documents and delivery of reward items will be confirmed by official email. We're the oldest organization doing this work. We've been doing this for a long time, and we've learned a lot along the way.
                 </p>
          </div>
      </div>
@@ -110,9 +110,9 @@
                 <p class="lead" style="text-align: left">
                 We need your help to share KB727 with your network and create a lasting impact. Education has the power to transform lives, uplift communities, and break the cycle of poverty. With your support, we can give these students the chance they deserve.<br><br>
 
-                It will only take a few minutes to copy the message we provide and share it with your network. <br><br>
+                It will only take a few minutes to copy the message we provide and share it with your network.<br><br>
 
-                We are willing to cooperate with more tutors, media, institutions, and donors to jointly provide support for socially responsible tutorials. If you're ready to help, please reach out. Together, we can make a world of difference. Thank you.
+                We are willing to cooperate with more tutors, media, institutions, and donors to jointly provide support for socially responsible tutoring. If you're ready to help, please reach out. Together, we can make a world of difference. Thank you.
                 </p>
          </div>
      </div>
