--- a/default.html
+++ b/default.html
@@ -39,7 +39,7 @@
     <a id="menu-toggle" href="#" class="btn btn-primary btn-lg toggle"><i class="fa fa-reorder"></i></a>
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-index btn-lg pull-right toggle" onClick="ga('send', '_trackEvent', 'Navbar', 'Toggle', 'Navbar toggle');"><i class="fa fa-times"></i></a>
+            <a id="menu-close" href="#" class="btn btn-index btn-lg pull-right toggle" onClick="ga('send', 'event', 'Navbar', 'Toggle', 'Navbar toggle');"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand"><a href="#top"><b>KB727.COM</b></a></li>
             <li><a href="#about" onClick="ga('send', '_trackEvent', 'Navbar', 'About');">关于我们</a></li>
             <li><a href="attachments\Training-Consulting.txt" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">认证项目</a></li>
