--- a/default.html
+++ b/default.html
@@ -46,7 +46,7 @@
             <li><a href="#portfolio" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">合作伙伴</a></li>
             <li><a href="attachments\Rewards.pdf" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">奖励物品</a></li>
             <li><a href="index.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">英文版本</a></li>
-            <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
+            <li><a href="mailto:Min.Fang@KB727.COM" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
             <hr>
             <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE">KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
         </ul>
@@ -66,7 +66,7 @@
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
                 <li><a href="attachments/Rewards.pdf" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="index.html" target="_blank"  title="英文版本" alt="英文版本" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
-                <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
+                <li><a href="mailto:Min.Fang@KB727.COM" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
         </div>
     </div>
@@ -188,7 +188,7 @@
             </ul>
                     <ul class="list-unstyled size-m spaced">
                         <li><i class="fa fa-map-marker"></i> Shanghai ● Seattle ● Buffalo</li>
-                        <li><i class="fa fa-envelope-o"></i> <a href="mailto:webmaster@kb727.com" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email bottom');">webmaster@kb727.com</a>
+                        <li><i class="fa fa-envelope-o"></i> <a href="mailto:Min.Fang@KB727.COM" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email bottom');">Min.Fang@KB727.COM</a>
                         </li>
                     </ul>
                 <div class="top-scroll">
