--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li><a href="#how" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">HOW WE WORK</a></li>
             <li><a href="#want" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">WANT TO GET INVOLVED?</a></li>
             <li><a href="default.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">Chinese Website</a></li>
-            <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">Send E-mail</a></li>
+            <li><a href="mailto:Min.Fang@KB727.COM" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">Send E-mail</a></li>
             <hr>
             <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE">KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
         </ul>
@@ -66,7 +66,7 @@
                 <li><a href="#how" title="HOW WE WORK" alt="HOW WE WORK" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-pen-to-square fa-3x"></i></a></li>
                 <li><a href="#want" title="WANT TO GET INVOLVED?" alt="WANT TO GET INVOLVED?" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
                 <li><a href="default.html" target="_blank"  title="Chinese Website" alt="Chinese Website" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
-                <li><a href="mailto:webmaster@kb727.com" title="Send E-mail" alt="Send E-mail" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
+                <li><a href="mailto:Min.Fang@KB727.COM" title="Send E-mail" alt="Send E-mail" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
         </div>
     </div>
@@ -79,7 +79,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>WHAT'S KB727</b></h3>
                 <p class="lead" style="text-align: left">
-                KB727 is a global certificate program that advocates for social responsibility in tutoring.<br><br>
+                KB727 is a global certificate program that advocates for social responsibility in tutoring. The primary founder is Min Fang, currently enrolled in English for Speakers in Other Languages (ESOL), In/PRF EDM.<br><br>
 
                 Our non-profit is dedicated to empowering students by providing them with opportunities to transform their futures. Many of these students can't afford the essential fees for tutoring that could unlock life-changing doors. That's why we're working to help them take the crucial next step toward success.
                 </p>
@@ -139,7 +139,7 @@
             </ul>
                     <ul class="list-unstyled size-m spaced">
                         <li><i class="fa fa-map-marker"></i> Shanghai ● Seattle ● Buffalo</li>
-                        <li><i class="fa fa-envelope-o"></i> <a href="mailto:webmaster@kb727.com" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email bottom');">webmaster@kb727.com</a>
+                        <li><i class="fa fa-envelope-o"></i> <a href="mailto:Min.Fang@KB727.COM" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email bottom');">Min.Fang@KB727.COM</a>
                     </ul>
                 <div class="top-scroll">
                 <a href="#top" title="Back to top" alt="Back to top"><i class="fa fa-angle-double-up scroll fa-4x"></i></a>
