--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
     <!-- services -->
     <div id="what" class="services">
         <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-md-offset-0 text-center">
+                   <div class="pixelMe toSlideRight" /></div>
+                </div>
+        <div class="container">
                 <h3 style="text-align: left"><b>WHAT'S KB727</b></h3>
                 <p class="lead" style="text-align: left">
                 KB727 is a global certificate program that advocates for social responsibility in tutoring. The primary founder is Min Fang, currently enrolled in English for Speakers in Other Languages (ESOL), In/PRF EDM.<br><br>
@@ -85,6 +90,8 @@
                 </p>
         </div>
     </div>
+  </div>
+</div>
 
     <div id="why" class="services">
         <div class="container">
