--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>WHAT'S KB727</b></h3>
                 <p class="lead" style="text-align: left">
-                KB727 is a global certificate program that advocates for social responsibility in tutoring. The primary founder is Min Fang, currently enrolled in English for Speakers in Other Languages (ESOL), In/PRF EDM.<br><br>
+                KB727 is a global certificate program that advocates for social responsibility in tutoring. The primary founder is Min Fang, who graduated with a Bachelor of English and a Minor in Education, and is currently enrolled in English for Speakers of Other Languages (ESOL), In/PRF EDM.<br><br>
 
                 Our non-profit is dedicated to empowering students by providing them with opportunities to transform their futures. Many of these students can't afford the essential fees for tutoring that could unlock life-changing doors. That's why we're working to help them take the crucial next step toward success.
                 </p>
