--- a/default.html
+++ b/default.html
@@ -77,7 +77,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-md-offset-0 text-center">
-                   <div class="pixelMe toSlideRight" /></div>
+                   <div class="pixelSeven toSlideRight" /></div>
                 </div>
             <div class="col-md-12 text-center">
                 <h2 style="text-align: left"><b>简介</b></h2>
