--- a/default.html
+++ b/default.html
@@ -120,7 +120,11 @@
         <div class="row">
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="img/media.png" alt="合作伙伴">
+                    <picture>
+                        <source srcset="img/media.webp" type="image/webp">
+                        <source srcset="img/media.jpg" type="image/jpeg"> 
+                        <img src="img/media.jpg" alt="合作伙伴">
+                    </picture>
                     <div class="caption">
                         <h3>媒体</h3>
                         <p style="text-align: left">&emsp;&emsp;欢迎媒体参与，分享我们的工作，我们尽最大的努力支持所有认证项目的商业推广。</p>
@@ -130,7 +134,11 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="img/institution.png" alt="合作伙伴">
+                    <picture>
+                        <source srcset="img/institution.webp" type="image/webp">
+                        <source srcset="img/institution.jpg" type="image/jpeg">
+                        <img src="img/institution.jpg" alt="合作伙伴">
+                    </picture>
                     <div class="caption">
                         <h3>机构</h3>
                         <p style="text-align: left">&emsp;&emsp;请向我们推荐具有社会责任感、优秀的私教课程，或共同支持公益免费的私教课程。</p>
@@ -140,13 +148,16 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <div>
-                        <img src="img/donation.png" alt="合作伙伴">
-                    </div>
+                    <picture>
+                        <source srcset="img/donation.webp" type="image/webp">
+                        <source srcset="img/donation.jpg" type="image/jpeg">
+                        <img src="img/donation.jpg" alt="合作伙伴">
+                    </picture>
                     <div class="caption">
                         <h3>捐赠</h3>
                         <p style="text-align: left">&emsp;&emsp;资金、收藏品、技术支持等捐赠记录与实际公益用途一一对应，供捐赠者随时查询。</p>
-              </div>
+                    </div>
+                </div>
             </div>
           </div>
         </div>
