--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
     <link href="font-awesome/css/all.min.css" rel="stylesheet">
 
     <!-- Icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v20230203=v20240519">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v20230203=v20240519">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png?v20230203=v20240519">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v20230203=v20240519">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.webp?v20240519">
+    <link rel="icon" type="image/webp" sizes="32x32" href="/favicon-32x32.webp?v20240519">
+    <link rel="icon" type="image/webp" sizes="192x192" href="/android-chrome-192x192.webp?v20240519">
+    <link rel="icon" type="image/webp" sizes="16x16" href="/favicon-16x16.webp?v20240519">
     <link rel="manifest" href="/site.webmanifest?v20230203=v20240519">
     <link rel="mask-icon" href="/safari-pinned-tab.svg?v20230203=v20240519" color="#5bbad5">
     <link rel="shortcut icon" href="/favicon.ico?v20230203=v20240519">
+    
+    <!-- 为不支持webp的浏览器提供后备方案 -->
+    <link rel="alternate icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v20240519">
+    <link rel="alternate icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v20240519">
 </head>
 
 <body>
