--- a/default.html
+++ b/default.html
@@ -48,7 +48,7 @@
             <li><a href="index.html" onClick="ga('send', 'event', 'Navbar', 'Click', 'English');">英文版本</a></li>
             <li><a href="mailto:Min.Fang@KB727.COM" onClick="ga('send', 'event', 'Navbar', 'Click', 'Contact');">联系我们</a></li>
             <hr>
-            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE">KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
+            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE">KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle and Buffalo, and have awarded 17 certificates.</p>
         </ul>
     </div>
     <!-- /Side Menu -->
