--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <li><a href="default.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">Chinese Website</a></li>
             <li><a href="mailto:Min.Fang@KB727.COM" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">Send E-mail</a></li>
             <hr>
-            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE">KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
+            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE">KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle and Buffalo, and have awarded 17 certificates.</p>
         </ul>
     </div>
     <!-- /Side Menu -->
@@ -101,7 +101,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>WHY KB727</b></h3>
                 <p class="lead" style="text-align: left">
-                Money shouldn't dictate access to education. We want to live in a world where everyone has access to a great education — not just those whose families can afford one. We encourage and support more low-income families and those with financial difficulties to access free tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.
+                Money shouldn't dictate access to education. We want to live in a world where everyone has access to a great education — not just those whose families can afford one. We encourage and support more low-income families and those with financial difficulties to access free tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle and Buffalo, and have awarded 17 certificates.
                 </p>
         </div>
     </div>
