--- a/default.html
+++ b/default.html
@@ -121,7 +121,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <picture>
-                        <source srcset="img/media.webp" type="image/webp">
+                        <source srcset="img/media.png" type="image/png">
                         <source srcset="img/media.jpg" type="image/jpeg"> 
                         <img src="img/media.jpg" alt="合作伙伴">
                     </picture>
@@ -135,7 +135,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <picture>
-                        <source srcset="img/institution.webp" type="image/webp">
+                        <source srcset="img/institution.png" type="image/png">
                         <source srcset="img/institution.jpg" type="image/jpeg">
                         <img src="img/institution.jpg" alt="合作伙伴">
                     </picture>
@@ -149,7 +149,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <picture>
-                        <source srcset="img/donation.webp" type="image/webp">
+                        <source srcset="img/donation.png" type="image/png">
                         <source srcset="img/donation.jpg" type="image/jpeg">
                         <img src="img/donation.jpg" alt="合作伙伴">
                     </picture>
